tests/v2_0/invalid/circular_import_a.devops
version = "v2.0"

// This file imports circular_import_b which imports back to this file
import "./circular_import_b.devops"

target "a" { address = "localhost:7700" }
